@startuml
!include Ventoriq_00_Style.puml

title Ventoriq - Frontend-Abhängigkeiten: Auth und Einstellungen

left to right direction

skinparam nodesep 90
skinparam ranksep 90
skinparam linetype ortho

package "Frontend" as FRONTEND {
  class RegistrierungLogik <<Controller>> {
    Registrierung UI
  }

  class PassKeyAuthController <<Controller>> {
    Passkey Login UI
  }

  class Einstellungen <<Controller>> {
    Settings UI
    Backup
    Profil löschen
    Version anzeigen
  }
}

package "Backend Auth / Session" as AUTH {
  class AuthService <<Service>> {
    + registerUser()
    + loginWithPassKey()
    + resetPassKeyWithRecoveryKey()
    + deleteLocalProfileWithRecoveryKey()
  }

  class StateManager <<Singleton>> {
    + login()
    + logout()
    + getCurrentUser()
  }
}

package "Backend Datenbank" as DB {
  class DataBase <<SQLite-Fassade>> {
    + Settings CRUD
  }

  class BackupService <<Service>> {
    + CreateBackup()
    + RestoreBackup()
  }
}

RegistrierungLogik --> AuthService : registriert Nutzer
PassKeyAuthController --> AuthService : prüft Passkey
PassKeyAuthController --> StateManager : setzt Session

Einstellungen --> AuthService : löscht Profil
Einstellungen --> StateManager : logout
Einstellungen --> DataBase : lädt / speichert Settings
Einstellungen --> BackupService : Backup / Restore

note bottom
Dieses Diagramm zeigt nur Authentifizierung und Einstellungen.
Andere Frontend-Bereiche sind bewusst ausgelagert.
end note

@enduml